<resources>
    <string name="app_name">Wash@Home</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="uxcam_app_key" translatable="false">gf3gv459j6iqav3</string>
    <string name="google_places_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBdo6LUKoaiHfXqUPqg5J4H52_AYzLx6ks</string>
    <string name="stripe_publishable_key" translatable="false">pk_live_51HqxCmGNvYMhrs1aR40MglH7IH11khbzfL93y8fd39NhMuYVgdHx988swtWvWkAK2jFqzU4CqbjhyquHR3n4ms4q00toAXwS9g</string>
    <string name="facebook_app_id" translatable="false">1589683401212172</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1589683401212172</string>
    <string name="facebook_client_token" translatable="false">51316882fa4f915a4115f17c82b65967</string>
    <string name="privacy_policy_url" translatable="false">https://www.washathome.co/privacy-policy/</string>
    <string name="terms_url" translatable="false">https://www.washathome.co/terms-and-conditions/</string>
    <string name="faq_url" translatable="false">https://washathome.info/content/faq/</string>
    <string name="feedback_url" translatable="false">https://washathome.info/content/feedback/</string>
    <string name="dispute_url" translatable="false">https://washathome.info/public/Dispute</string>
    <string name="transaction_url" translatable="false">https://washathome.info/public/Transaction</string>
    <string name="payout_url" translatable="false">https://washathome.info/public/Payout</string>
    <string name="ratings_url" translatable="false">https://washathome.info/public/Review</string>
    <string name="contact_url" translatable="false">https://washathome.info/content/contact/</string>
    <string name="welcome_to_our_app">Welcome to our app!</string>
    <string name="enter_your_phone_number_and_start_using_our_wide_range_of_services">Enter your phone number and start using our wide range of services.</string>
    <string name="phone_number">Phone Number</string>
    <string name="language">Language</string>
    <string name="by_signing_up_you_agree_to_our">By signing up, you agree to our</string>
    <string name="terms_of_service_lined"><u>Terms of Service</u></string>
    <string name="and">&amp;</string>
    <string name="privacy_policy_lined"><u>Privacy Policy</u></string>
    <string name="continue_">Continue</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_the_verification_code_you_received_to_verify_your_phone_number">Enter the verification code you received to verify your phone number</string>
    <string name="otp_code">OTP Code</string>
    <string name="verify">Verify</string>
    <string name="take_your_pick">Take your pick</string>
    <string name="next">Next</string>
    <string name="if_you_changed_your_mind_there_s_no_pressure_you_can_always_choose_to_switch_between_accounts">If you changed your mind, there\'s no pressure! You can always choose to switch between accounts.</string>
    <string name="free_your_schedule_and_let_someone_do_your_laundry">Free your schedule and let someone do your laundry</string>
    <string name="washee">Washee</string>
    <string name="washer">Washer</string>
    <string name="earn_extra_money_by_washing_amp_ironing_people_s_laundry">Earn extra money by washing &amp; ironing people\'s laundry</string>
    <string name="courier">Courier</string>
    <string name="drive_your_way_to_some_extra_cash_by_carrying_laundry_between_washee_amp_washer">Drive your way to some extra cash by carrying laundry between Washee &amp; Washer</string>
    <string name="sign_up">Sign Up</string>
    <string name="fill_in_your_personal_information_to_benefit_from_our_revolutionary_laundry_app">Fill in your personal information to benefit from our revolutionary laundry App</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="for_communication_purposes_only">(For communication purposes only)</string>
    <string name="gender">Gender</string>
    <string name="birthdate">Birthdate</string>
    <string name="optional">(Optional)</string>
    <string name="done">Done</string>
    <string name="id_or_passport_image">ID or Passport image</string>
    <string name="driving_data">Driving Data</string>
    <string name="fill_in_your_vehicle_and_driving_licensee_information_for_more_secure_purposes">Fill in your Vehicle and Driving licensee information for more secure purposes</string>
    <string name="availability_status">Availability Status</string>
    <string name="switch_on_your_availability_to_let_people_know_you_re_ready_to_do_some_laundry_if_you_have_any_active_orders_you_ll_be_required_to_fulfill_and_complete_them">Switch on your availability to let people know you\'re ready to do some laundry! If you have any active orders, you\'ll be required to fulfill and complete them.</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="fill_feild">This field can\'t be empty!</string>
    <string name="accept_terms">Please agree on our terms &amp; conditions and our privacy policy</string>
    <string name="male">\t Male</string>
    <string name="female">\t Female</string>
    <string name="turn_on_location">Turn on location</string>
    <string name="how_far_are_you_willing_to_travel">How far are you willing to travel?</string>
    <string name="vehicle_id_image">Vehicle ID image</string>
    <string name="_5_0_miles">5.0 Miles</string>
    <string name="driving_license">Driving license</string>
    <string name="vehicle_image">Vehicle image</string>
    <string name="miles">Miles</string>
    <string name="upload_images">Please upload all the required images!</string>
    <string name="your_services">Your Services</string>
    <string name="we_want_to_match_you_with_the_best_opportunities_let_us_know_what_services_you_ll_be_able_to_provide">We want to match you with the best opportunities. Let us know what services you\'ll be able to provide.</string>
    <string name="select_services">Select Services</string>
    <string name="car">Car</string>
    <string name="bike">Bike</string>
    <string name="bicycle">Bicycle</string>
    <string name="express_services">Express Services</string>
    <string name="when_you_opt_in_for_express_services_you_ll_be_required_to_carry_them_out_within_24_hours">When you opt-in for express services, you\'ll be required to carry them out within 24 hours.</string>
    <string name="washing_machine_image">Washing Machine image</string>
    <string name="dryer_image">Dryer image</string>
    <string name="add_extra_image">Add Extra Image</string>
    <string name="enable_services_availability">Please enable services availability!</string>
    <string name="enable_availability">Please enable driving availability!</string>
    <string name="search_data">Search items (e.g. shirt)</string>
    <string name="order_now">Order Now</string>
    <string name="items_quantity">Items Quantity</string>
    <string name="wash_and_dry">Wash &amp; Dry</string>
    <string name="fold">Fold</string>
    <string name="dry_clean">Dry Clean</string>
    <string name="hang">Hang</string>
    <string name="iron">Iron</string>
    <string name="item_notes_hint">Add Notes</string>
    <string name="add_to_basket">Add To Basket</string>
    <string name="notifications">Notifications</string>
    <string name="title_basket">Basket</string>
    <string name="title_home">Home</string>
    <string name="title_inbox">Chats</string>
    <string name="title_orders">Orders</string>
    <string name="title_more">More</string>
    <string name="delivery_info">Delivery Info</string>
    <string name="overview">Overview</string>
    <string name="payment">Payment</string>
    <string name="add_more_items">Add more items</string>
    <string name="add_notes">Add notes...</string>
    <string name="basket_total">Basket total</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="delivery_options">Delivery Options</string>
    <string name="self_drop_off_amp_pickup">Self drop-off &amp; collection</string>
    <string name="free">(Free)</string>
    <string name="washer_driver_to_collect_amp_return">Washer/Courier to collect &amp; return</string>
    <string name="my_delivery_address">My address</string>
    <string name="choose_service_speed">Choose service speed</string>
    <string name="normal_delivery">Normal Delivery</string>
    <string name="hours48">(48+ hours)</string>
    <string name="hours24">(24+ hours)</string>
    <string name="laundry_done_in_48_hours">Laundry done in 48+ hours</string>
    <string name="express_delivery">Express</string>
    <string name="laundry_done_in_24_hours">Laundry done in 24+ hours</string>
    <string name="collection_return_times">Collection and return times</string>
    <string name="collection_time">Collection</string>
    <string name="return_time">Return</string>
    <string name="i_want_to_insure_my_laundry_items">I want to insure my laundry items</string>
    <string name="promo_code">Promo Code</string>
    <string name="apply">Apply</string>
    <string name="discount">Discount</string>
    <string name="hey_there">Hey there,</string>
    <string name="internet_connection">Please check your internet connection!</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_item_desc">Are you sure you want to delete this item?</string>
    <string name="your_basket_is_empty">Your basket is empty</string>
    <string name="there_are_currently_no_items_in_your_basket_you_ll_be_able_to_view_your_items_here_once_you_start_adding_laundry_items_to_your_basket">There are currently no items in your basket. You’ll be able to view your items here once you start adding laundry items to your basket.</string>
    <string name="browse_items">Browse Items</string>
    <string name="basket">Basket</string>
    <string name="delivery_speed">Delivery Speed</string>
    <string name="pick_up_location">Pick-Up location</string>
    <string name="pick_up_time_date">Pick-Up time &amp; date</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="i_want_to_use_the_same_pick_up_data_for_drop_off_too">I want to use the same Pick-Up data for Drop-Off too</string>
    <string name="drop_off_location">Drop-Off location</string>
    <string name="drop_off_time_date">Drop-Off time &amp; date</string>
    <string name="select">Select</string>
    <string name="no_favorite_items_yet">No favorites yet</string>
    <string name="no_favorite_howto">Simplify your checkout process by adding your favorites to this list. Just click on the heart icon next to your usual items.</string>
    <string name="select_date">Select date</string>
    <string name="empty_pick_up_date">Pick-up date can\'t be empty!</string>
    <string name="empty_pick_up_location">Pick-up location can\'t be empty!</string>
    <string name="empty_drop_off_location">Drop-off location can\'t be empty!</string>
    <string name="empty_drop_off_date">Drop off date can\'t be empty!</string>
    <string name="delivery_fee_for_every_5_miles_is">Delivery fee for every 5 miles is</string>
    <string name="plus">, plus</string>
    <string name="for_every_mile">for every mile.</string>
    <string name="address">Address</string>
    <string name="service_speed">Service Speed</string>
    <string name="items_insurance">Items Insurance</string>
    <string name="view_items">View Items</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="pick_up">Pick-up</string>
    <string name="items">Items</string>
    <string name="are_you_sure_you_picked_up_this_order_from_wahsee">Are you sure you picked up this order from washee?</string>
    <string name="back">Back</string>
</resources>