<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/empty_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription"
                tools:src="@drawable/ic_empty_inbox" />

            <TextView
                android:id="@+id/empty_title"
                style="@style/AppTheme.EmptyView.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                tools:text="@string/no_favorite_items_yet" />

            <TextView
                android:id="@+id/empty_description"
                style="@style/AppTheme.EmptyView.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                tools:text="@string/no_favorite_howto" />

            <Button
                android:id="@+id/empty_action_button"
                style="@style/AppTheme.Button.RoundedButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/icon_size_large"
                android:paddingStart="@dimen/spacing_xlarge"
                android:paddingEnd="@dimen/spacing_xlarge"
                tools:text="@string/browse_items" />
        </LinearLayout>
    </ScrollView>
</layout>