<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/_35sdp"
    android:layout_marginEnd="@dimen/_35sdp"
    android:background="@drawable/white_radius"
    android:padding="@dimen/_15sdp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verification_code"
        android:fontFamily="@font/gotham_rounded_bold"
        android:textSize="@dimen/_13ssp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_verification_code_you_received_to_verify_your_phone_number"
        android:textColor="@color/dark_grey"
        android:fontFamily="@font/gotham_rounded_book"
        android:textSize="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_7sdp"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:background="@color/white">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otp_code"
                android:gravity="center_horizontal"
                android:fontFamily="@font/gotham_rounded_book"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_10ssp"/>
            <EditText
                android:id="@+id/verificationCodeEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:imeOptions="actionDone"
                android:background="@color/white"
                android:textColorHint="@color/black"
                android:fontFamily="@font/gotham_rounded_medium"
                android:hint="000000"
                android:maxLength="6"
                android:layout_marginTop="@dimen/_7sdp"
                android:gravity="center_horizontal"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/black"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/_15sdp">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:gravity="center_horizontal"
            android:fontFamily="@font/gotham_rounded_medium"
            android:textColor="@color/mid_grey"
            android:textSize="@dimen/_11ssp"/>
        <TextView
            android:id="@+id/verify_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/verify"
            android:gravity="center_horizontal"
            android:fontFamily="@font/gotham_rounded_medium"
            android:textColor="@color/blue"
            android:textSize="@dimen/_11ssp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>