<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.introduction.PhoneLanguageFragment">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line"
        android:src="@drawable/blue_gradient"
        android:scaleType="fitXY"
        android:alpha="0.85"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="@id/welcome_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_30sdp"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/white_logo"
        app:layout_constraintBottom_toTopOf="@id/welcome_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/off_white_top_radius"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_our_app"
            android:textColor="@color/dark_grey"
            android:fontFamily="@font/gotham_rounded_medium"
            android:textSize="@dimen/_20ssp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_phone_number_and_start_using_our_wide_range_of_services"
            android:textColor="@color/dark_grey"
            android:fontFamily="@font/gotham_rounded_book"
            android:textSize="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                android:background="@color/white">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:fontFamily="@font/gotham_rounded_book"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_10ssp"/>
                <Spinner
                    android:id="@+id/languages_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                android:background="@color/white">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:fontFamily="@font/gotham_rounded_book"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_10ssp"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginTop="@dimen/_5sdp">
                    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                        android:id="@+id/phone_ccp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        app:ccp_showFlag="true"
                        app:ccp_hideNameCode="true"
                        app:ccp_textSize="@dimen/_11ssp"/>

                    <EditText
                        android:id="@+id/phone_num_edt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="phone"
                        android:textAlignment="viewStart"
                        android:imeOptions="actionDone"
                        android:background="@color/white"
                        android:textColorHint="@color/black"
                        android:fontFamily="@font/gotham_rounded_medium"
                        android:hint="00000000000"
                        android:textSize="@dimen/_11ssp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:textColor="@color/black"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp">
            <CheckBox
                android:id="@+id/terms_privacy_CB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_signing_up_you_agree_to_our"
                android:textColor="@color/black"
                android:fontFamily="@font/gotham_rounded_book"
                android:textSize="@dimen/_6ssp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_service_lined"
                android:textColor="@color/blue"
                android:textSize="@dimen/_6ssp"
                android:fontFamily="@font/gotham_rounded_bold"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_3sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and"
                android:textColor="@color/black"
                android:fontFamily="@font/gotham_rounded_book"
                android:textSize="@dimen/_6ssp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_lined"
                android:textColor="@color/blue"
                android:textSize="@dimen/_6ssp"
                android:fontFamily="@font/gotham_rounded_bold"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_3sdp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            app:cornerRadius="@dimen/_20sdp"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/gotham_rounded_medium"
            android:paddingStart="@dimen/_30sdp"
            android:paddingEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_20sdp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>